--- a/src/gokstad/online-classes/august/class-03/style.css
+++ b/src/gokstad/online-classes/august/class-03/style.css
@@ -1,10 +1,16 @@
 form {
   display: flex;
   flex-direction: column;
+  align-items: start;
   max-width: 300px;
   width: 100%;
 }
 
-label {
+.container {
   margin-top: 20px;
+}
+
+button {
+  margin-top: 20px;
+  cursor: pointer;
 }
