style: removed text-decoration when hover and focus on the buttonDownload

--- a/src/gokstad/work-requirement/01/css/style.css
+++ b/src/gokstad/work-requirement/01/css/style.css
@@ -190,6 +190,7 @@ nav {
     background: var(--color-signature);
     color: var(--color-background);
     outline: none;
+    text-decoration: none;
   }
 
   @media (width <= 1040px) {
