--- a/src/gokstad/online-classes/First semester/week-38/style.css
+++ b/src/gokstad/online-classes/First semester/week-38/style.css
@@ -1,6 +1,7 @@
 :root {
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
+
   --border-radius: 6px;
   --color-background: #070d17;
   --color-black: #000;
@@ -25,10 +26,10 @@ body {
     display: block;
     height: 150px;
     max-height: 100px;
+    padding: 0 2rem;
     position: relative;
     top: 10px;
     width: 200px;
-    padding: 0 2rem;
   }
 }
 
@@ -39,13 +40,13 @@ body {
     border: none;
     border-radius: var(--border-radius);
     color: var(--color-gray);
-    padding: 1rem 1rem;
+    padding: 1rem;
     width: 250px;
 
     &::placeholder {
       color: var(--color-gray);
-      font-weight: var(--font-weight-bold);
       font-size: var(--font-size-medium);
+      font-weight: var(--font-weight-bold);
     }
   }
 }
@@ -55,8 +56,8 @@ body {
   background-color: var(--color-red);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 20%);
   display: grid;
-  grid-template-columns: auto 1fr auto;
   font-size: 1.3rem;
+  grid-template-columns: auto 1fr auto;
 
   > * {
     min-width: 0;
@@ -70,54 +71,6 @@ body {
 
     @media (width >= 800px) {
       justify-content: flex-start;
-    }
-
-    .nav-items {
-      display: flex;
-      flex-wrap: nowrap;
-      list-style: none;
-      margin: 0;
-      overflow: hidden;
-      padding: 0;
-      white-space: nowrap;
-
-      li {
-        margin-right: 1rem;
-        padding: 0.5rem 1rem;
-
-        a {
-          color: var(--color-white);
-          font-weight: var(--font-weight-bold);
-          text-decoration: none;
-          padding: 1rem 1rem;
-        }
-
-        &:hover {
-          background-color: var(--color-red-hover);
-          border-radius: var(--border-radius);
-        }
-      }
-
-      @media (max-width: 700px) {
-        flex-wrap: nowrap;
-      }
-
-      @media (width >= 800px) {
-        flex-grow: 1;
-      }
-    }
-
-    .more-btn {
-      background-color: var(--color-red-hover);
-      border: none;
-      border-radius: var(--border-radius);
-      color: var(--color-white);
-      cursor: pointer;
-      font-size: var(--font-size-medium);
-      font-weight: var(--font-weight-bold);
-      margin-right: 2rem;
-      padding: 0.5rem 1rem;
-      white-space: nowrap;
     }
 
     .nav-sub {
@@ -163,6 +116,54 @@ body {
         width: 0;
         z-index: 11;
       }
+    }
+
+    .nav-items {
+      display: flex;
+      flex-wrap: nowrap;
+      list-style: none;
+      margin: 0;
+      overflow: hidden;
+      padding: 0;
+      white-space: nowrap;
+
+      li {
+        margin-right: 1rem;
+        padding: 0.5rem 1rem;
+
+        a {
+          color: var(--color-white);
+          font-weight: var(--font-weight-bold);
+          padding: 1rem;
+          text-decoration: none;
+        }
+
+        &:hover {
+          background-color: var(--color-red-hover);
+          border-radius: var(--border-radius);
+        }
+      }
+
+      @media (width <= 700px) {
+        flex-wrap: nowrap;
+      }
+
+      @media (width >= 800px) {
+        flex-grow: 1;
+      }
+    }
+
+    .more-btn {
+      background-color: var(--color-red-hover);
+      border: none;
+      border-radius: var(--border-radius);
+      color: var(--color-white);
+      cursor: pointer;
+      font-size: var(--font-size-medium);
+      font-weight: var(--font-weight-bold);
+      margin-right: 2rem;
+      padding: 0.5rem 1rem;
+      white-space: nowrap;
     }
   }
 }
